--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.3",
-    "multer": "^2.0.2"
+    "mongoose": "^8.16.4",
+    "multer": "^2.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
