Fix lôi gưi mât khâu, thêm file .env.docker

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,19 +1,32 @@
 worker_processes auto;
+
 events {
   worker_connections 1024;
 }
+
 http {
-  include /etc/nginx/mime.types;
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+
+  sendfile        on;
+  keepalive_timeout  65;
+
   server {
     listen 80;
     server_name localhost;
+
     root /usr/share/nginx/html;
     index index.html;
+
     location / {
       try_files $uri $uri/ /index.html;
     }
-    location ~* \.(css|js|png|jpg|jpeg|gif|ico) {
-      add_header Content-Type text/css;
+
+    # Static files được xử lý tự động theo mime.types (không cần ép Content-Type)
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot)$ {
+      expires 1y;
+      access_log off;
+      add_header Cache-Control "public";
     }
   }
 }
